<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".HomeActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="32dp"
            android:paddingRight="32dp"
            android:paddingTop="140dp"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:background="@color/background"
            android:gravity="center"
            android:orientation="vertical"
            >
            <TextView android:text="@string/home_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/dark_gray"
                android:textSize="22sp"
                android:gravity="center"
                android:paddingBottom="8dp"
                />
            <Button
                android:id="@+id/firstAppBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/first_app_name"
                style="@style/Raised.Button"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="8dp" />
            <Button
                android:id="@+id/secondAppBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/second_app_name"
                style="@style/Raised.Button"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="8dp" />
            <Button
                android:id="@+id/thirdAppBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/third_app_name"
                style="@style/Raised.Button"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="8dp" />
            <Button
                android:id="@+id/fourthAppBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fourth_app_name"
                style="@style/Raised.Button"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="8dp" />
            <Button
                android:id="@+id/fifthAppBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fifth_app_name"
                style="@style/Raised.Button"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="8dp" />
            <Button
                android:id="@+id/sixthAppBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sixth_app_name"
                style="@style/Raised.Button"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="8dp" />

        </LinearLayout>
    </ScrollView>

    <include
        layout="@layout/toolbar"
        />

</FrameLayout>
